--- a/etc/sysctl.d/net.conf
+++ b/etc/sysctl.d/net.conf
@@ -126,7 +126,7 @@ net.ipv4.tcp_max_syn_backlog = 1024
 # 如果设置，TCP 将执行接收缓冲区自动调整
 # 并尝试自动调整缓冲区的大小（不大于 tcp_rmem[2]）为匹配路径所需的大小，以实现完全吞吐量
 # 默认启用
-# sysctl -w net.ipv4.tcp_moderate_rcvbuf=1
+# net.ipv4.tcp_moderate_rcvbuf = 1
 
 # 启用 MTU 探测
 # 1  =  默认禁用, 在检测到 ICMP black hole 时启用
