--- a/etc/sysctl.d/vm.conf
+++ b/etc/sysctl.d/vm.conf
@@ -11,3 +11,40 @@
 # 设置这个参数为较低的值会减少内存的交换，从而提升一些系统上的响应度。
 # 较高值会导致内核尝试使用交换空间，而值100意味着各IO的喜好(或厌恶)程度相等。
 vm.swappiness = 50
+
+# https://wiki.archlinuxcn.org/wiki/%E6%B8%B8%E6%88%8F#%E8%B0%83%E6%95%B4%E5%86%85%E6%A0%B8%E5%8F%82%E6%95%B0%E4%BB%A5%E5%AE%9E%E7%8E%B0%E5%93%8D%E5%BA%94%E6%97%B6%E9%97%B4%E4%B8%80%E8%87%B4%E6%80%A7
+
+# 透明巨面（THP）分配的主动压缩
+# 这会减少平均分配停滞
+# 但不一定减少最大分配停滞
+# 禁用主动压缩,它会引入抖动
+# 默认值为 20 ,取值范围 0 - 100
+vm.compaction_proactiveness = 10
+
+# 内存碎片化时的回收级别
+# 在内存碎片化的情况下
+# 降低水印加速因数以对一个单独的页面块（64位x86上为2MB）进行碎片整理
+# 这会更好地在内存碎片事件之后将应用程序数据保留在最后一级处理器缓存中
+# 默认值为 15,000
+# 0 将禁用该功能
+# vm.watermark_boost_factor = 1
+
+# 最小可用内存容量(单位:kb)
+# 如果有足够的可用 RAM，可增加最小可用内存容量以避免内存分配卡顿
+# 不要将其设置为低于 1024 KB 或高于系统内存的 5%
+vm.min_free_kbytes = 262144
+
+# 如果有足够的可用 RAM，可增加水印比例因数以进一步降低分配停滞的可能性
+# 默认值 10 表示剩余 0.1% 可用内存时 kswapd 被唤醒以释放内存
+vm.watermark_scale_factor = 100
+
+# 区域回收（锁定和移动引入延迟峰值的内存页面）选项
+# 0 区域回收关闭
+# 1 区域回收开启
+# 2 区域回收将脏页写出
+# 4 区域回收交换页面
+vm.zone_reclaim_mode = 0
+
+# 减少最大页面锁定获取延迟
+# 同时保持足够的吞吐量
+vm.page_lock_unfairness = 4
