--- a/home/.local/share/fcitx5/rime/dict/self_dict.dict.yaml
+++ b/home/.local/share/fcitx5/rime/dict/self_dict.dict.yaml
@@ -8,7 +8,7 @@ import_tables:
   # 字表
   - rime_ice/8105
   # 大字表（按需启用）
-  # - rime_ice/41448
+  - rime_ice/41448
   # 朙月拼音 字表
   # - luna_pinyin
   # 袖珍简化字拼音 字表
