--- a/etc/systemd/timesyncd.conf
+++ b/etc/systemd/timesyncd.conf
@@ -4,4 +4,4 @@
 NTP=ntp.tencent.com ntp.aliyun.com time.apple.com time.windows.com
 # 后备 NTP 服务器
 # 国家授时中心及其他相关项目
-FallbackNTP=ntp.ntsc.ac.cn cn.pool.ntp.org arch.pool.ntp.org
+FallbackNTP=ntp.ntsc.ac.cn cn.pool.ntp.org pool.ntp.org arch.pool.ntp.org
