--- a/etc/systemd/timesyncd.conf
+++ b/etc/systemd/timesyncd.conf
@@ -3,5 +3,5 @@
 # 腾讯 阿里 苹果 微软
 NTP=ntp.tencent.com ntp.aliyun.com time.apple.com time.windows.com
 # 后备 NTP 服务器
-# 国家授时中心及其他相关项目
+# 国家授时中心 ntppool-cn ntppool archlinux
 FallbackNTP=ntp.ntsc.ac.cn cn.pool.ntp.org pool.ntp.org arch.pool.ntp.org
