--- a/etc/NetworkManager/conf.d/connection.conf
+++ b/etc/NetworkManager/conf.d/connection.conf
@@ -31,28 +31,23 @@ ipv6.dhcp-send-hostname=false
 # ipv6.dhcp-hostname="FA"
 
 [connection]
-# 这用于 各种目的
-# 请注意，根据使用它的上下文，其他 参数也被植入到生成算法中。例如，通常包括每个主机的密钥，以便不同的系统最终 生成不同的 ID。
-# “$”字符经过特殊处理以执行动态 激活时的替换。
-# 目前，支持的有 “${CONNECTION}”， “${DEVICE}”， “${MAC}”， “${BOOT}”， “${RANDOM}”。
-# 这些有效地创造了独特的 每个连接、每个设备、每个启动或每次的 ID。
-# 这 “${CONNECTION}” 使用配置文件的 connection.uuid，
-# “${DEVICE}” 使用设备的接口名称和
-# “${MAC}”设备的永久MAC地址。
-# 任何无法识别的 “$”后面的模式将逐字处理，但保留到将来 用。
-# 因此，建议您避免使用“$”或将其转义为“$$”。为 例如，将其设置为“${CONNECTION}-${BOOT}-${DEVICE}”以创建一个 此连接的唯一 ID，随每次重新启动而更改，并且不同 取决于配置文件激活的接口。
-connection.stable-id=${CONNECTION}-${DEVICE}-${BOOT}
+# 该值可在多个配置选项中发挥作用
+# 根据发挥作用的位置不同，它可能会发生变动
+# 并根据其所处上下文产生一个唯一值
+# 以'$'开头并被{}包裹的是可由系统生成的变量
+# 支持的变量有：'${CONNECTION}' '${DEVICE}' '${MAC}' '${BOOT}' '${RANDOM}'
+# '${CONNECTION}' 每个连接都不同
+# '${DEVICE}' 设备的接口名称
+# '${MAC}' 设备的永久MAC地址
+# '${BOOT}' 每次启动时变化
+# '${RANDOM}' 每一次都会变化
+connection.stable-id=${CONNECTION}-${DEVICE}-${BOOT}-${RANDOM}
 # random 每次连接到新的或以前已知的网络时都会生成一个新的 MAC 地址
 # stable 会生成一个随机 MAC 地址，并将其与此网络永久关联
 ethernet.cloned-mac-address=stable
 # 发送到 DHCP 服务器以标识本地的字符串
-# 特殊值“mac”和“perm-mac”是使用设备的当前或永久 MAC 地址来生成客户端标识符。
-# 目前，这些 选项仅适用于以太网类型的链路。
-# 特殊值“ipv6-duid”使用 DUID 从 “ipv6.dhcp-duid”生成符合 RFC4361 的客户端 标识符
-# 作为 IAID，它使用“ipv4.dhcp-iaid”并回退到 “ipv6.dhcp-iaid”（如果未设置）。
-# duid”生成符合RFC4361 基于“ipv4.dhcp-iaid”的客户端标识符，并使用 DUID 通过哈希 /etc/machine-id 生成
-# “stable”生成 基于 stable-id 的 type 0 客户端标识符（请参阅 connection.stable-id） 和每主机密钥。
-# 如果您设置了 stable-id，则可能需要包含 “${DEVICE}”或“${MAC}”说明符，用于获取每个设备 钥匙。
+# 从stable-id生成 | 当前mac | 永久MAC
+# stable | mac | perm-mac
 ipv4.dhcp-client-id=stable
 #  “stable” 可用于根据 stable-id 生成 IAID（请参阅 connection.stable-id），每个主机的密钥和接口名称。
 ipv4.dhcp-iaid=stable
