--- a/etc/NetworkManager/conf.d/main.conf
+++ b/etc/NetworkManager/conf.d/main.conf
@@ -15,5 +15,7 @@ firewall-backend=nftables
 # IWD 保存其网络配置文件的目录
 # iwd-config-path=auto
 # 主机名模式
+# default | dhcp | none
+# default 通过DHCP或反向DNS查找主机名
 # none：NetworkManager 将不管理主机名
-# hostname-mode=none
+hostname-mode=default
