--- a/etc/nftables.conf
+++ b/etc/nftables.conf
@@ -17,7 +17,7 @@ table inet filter {
     type filter hook input priority filter
     policy drop
     ct state invalid drop comment "丢弃无效连接"
-    ct state {established, related} accept comment "允许 tracked 连接"
+    ct state {established, related} accept comment "允许已建立的连接"
     iifname lo accept comment "允许本地环回连接"
     # ip protocol icmp accept comment "允许 icmp"
     meta l4proto icmp accept comment "接受 ICMP"
