--- a/etc/sysctl.d/net.conf
+++ b/etc/sysctl.d/net.conf
@@ -21,6 +21,7 @@ net.ipv4.conf.all.accept_redirects = 0
 net.ipv4.conf.default.accept_redirects = 0
 net.ipv4.conf.all.secure_redirects = 0
 net.ipv4.conf.default.secure_redirects = 0
+# 路由器请注释下面两行
 net.ipv4.conf.all.send_redirects = 0
 net.ipv4.conf.default.send_redirects = 0
 
@@ -165,11 +166,12 @@ net.mptcp.checksum_enabled = 1
 # not 0 - enabled (default)
 net.netfilter.nf_conntrack_checksum = 1
 
-# 启用连接跟踪流时间戳
+# 启用对连接时间戳的检查
 # 0 - disabled (default)
 # not 0 - enabled
 net.netfilter.nf_conntrack_timestamp = 1
 
-# nf_conntrack_tcp_timeout_established - INTEGER (seconds)
+# tcp 连接建立超时
+# tcp 连接建立后不发送数据的超时时间
 # default 432000 (5 days)
 net.netfilter.nf_conntrack_tcp_timeout_established = 150
