--- a/etc/systemd/resolved.conf
+++ b/etc/systemd/resolved.conf
@@ -6,7 +6,7 @@
 FallbackDNS=2400:3200::1#dns.alidns.com 2400:3200:baba::1#dns.alidns.com 223.5.5.5#dns.alidns.com 223.6.6.6#dns.alidns.com 2402:4e00:: 119.29.29.29
 # DNSSEC 支持(实验性)
 # true | allow-downgrade | false
-DNSSEC=allow-downgrade
+DNSSEC=false
 # DoT 支持
 # true | opportunistic | false
 DNSOverTLS=opportunistic
