--- a/etc/sysctl.d/net.conf
+++ b/etc/sysctl.d/net.conf
@@ -151,7 +151,7 @@ net.ipv6.conf.lo.addr_gen_mode = 0
 # /proc/sys/net/mptcp/*
 
 # 启用 Multi-path tcp
-net.mptcp.enabled = 1
+# net.mptcp.enabled = 1
 
 # 启用MPTCP传输层中数据序列号校验和（DSS-checksum）
 # DSS-checksum主要和传输的可靠性相关
