--- a/etc/systemd/timesyncd.conf
+++ b/etc/systemd/timesyncd.conf
@@ -1,7 +1,7 @@
 [Time]
 # 首选 NTP 服务器
-# 腾讯 阿里 苹果 微软
-NTP=ntp.tencent.com ntp.aliyun.com time.apple.com time.windows.com
+# 阿里 腾讯 苹果 微软
+NTP=ntp.aliyun.com ntp.tencent.com time.apple.com time.windows.com
 # 后备 NTP 服务器
 #  ntppool-cn ntppool-asia ntppool 国家授时中心
 FallbackNTP=cn.pool.ntp.org asia.pool.ntp.org pool.ntp.org ntp.ntsc.ac.cn
