修改 nftables.conf

--- a/etc/nftables.conf
+++ b/etc/nftables.conf
@@ -1,9 +1,6 @@
 #!/usr/bin/nft -f
 # vim:set ts=2 sw=2 et:
 
-# IPv4/IPv6 Simple & Safe firewall ruleset.
-# More examples in /usr/share/nftables/ and /usr/share/doc/nftables/examples/.
-
 # icmpx type
 # no-route 无路线
 # port-unreachable 端口无法访问
@@ -12,37 +9,68 @@
 
 table inet filter
 delete table inet filter
+
 table inet filter {
   chain input {
     type filter hook input priority filter
     policy drop
-    ct state invalid drop comment "丢弃无效连接"
+    
     ct state {established, related} accept comment "允许已建立的连接"
-    iifname lo accept comment "允许本地环回连接"
-    # ip protocol icmp accept comment "允许 icmp"
-    meta l4proto icmp accept comment "接受 ICMP"
-    meta l4proto ipv6-icmp accept comment "允许 icmp v6"
-    udp dport dhcpv6-client accept comment "允许 dhcp v6"
-    jump input_filter comment "加载应用规则"
-    # 或者丢弃其他入站连接
-    jump blocker comment "拒绝其他入站连接"
+		iifname lo accept comment "允许本地环回连接"
+		ct state invalid drop comment "丢弃无效连接"
+
+		tcp dport 113 reject with icmpx type port-unreachable \
+		comment "Reject AUTH to make it fail fast"
+
+    # IPv4
+		# ip protocol icmp accept comment "允许 icmp"
+		# meta l4proto icmp accept comment "接受 ICMP"
+		ip protocol icmp icmp type {
+			echo-reply,  				        # type 0
+			destination-unreachable,    # type 3
+			echo-request,  				      # type 8
+			time-exceeded,  			      # type 11
+			parameter-problem,  		    # type 12
+		} accept \
+		comment "ICMP"
+
+    # IPv6
+		# meta l4proto ipv6-icmp accept comment "允许 icmp v6"
+		icmpv6 type {
+			destination-unreachable,  	# type 1
+			packet-too-big,  			      # type 2
+			time-exceeded,  			      # type 3
+			parameter-problem,  		    # type 4
+			echo-request,  				      # type 128
+			echo-reply,  				        # type 129
+		} accept \
+		comment "基础 IPv6 icmp 功能"
+    icmpv6 type {
+			nd-router-solicit,  	  # type 133
+			nd-router-advert,  		  # type 134
+			nd-neighbor-solicit,  	# type 135
+			nd-neighbor-advert,  	  # type 136
+		} ip6 hoplimit 255 accept \
+		comment "IPv6 SLAAC"
+    icmpv6 type {
+			mld-listener-query,  	  # type 130
+			mld-listener-report,  	# type 131
+			mld-listener-reduction,	# type 132
+			mld2-listener-report,  	# type 143
+		} ip6 saddr fe80::/10 accept \
+		comment "IPv6 本地邻居发现"
+    ip6 saddr fe80::/10 udp sport 547 udp dport 546 accept comment "dhcp v6"
+
+    tcp dport ssh ct state new limit rate 10/minute accept comment "SSH 端口限速"
+    tcp dport { http, https } accept comment "HTTP server"
+    udp dport { http, https } accept comment "HTTP/2 server"
   }
   chain output {
     type filter hook output priority filter
     policy accept
-    jump output_filter comment "加载屏蔽规则"
   }
   chain forward {
     type filter hook forward priority filter
     policy drop
   }
-  chain blocker {
-    meta l4proto tcp reject with tcp reset comment "tcp reset tcp包"
-    meta l4proto udp reject with icmpx port-unreachable comment "对udp包返回端口不可达"
-    reject with icmpx host-unreachable comment "对其他包返回主机不可达"
-  }
-  # 导入应用规则
-  include "/etc/nftables.d/in-filter.nft"
-  # 导入屏蔽规则
-  include "/etc/nftables.d/out-filter.nft"
 }
