--- a/etc/cmdline.d/watchdog.conf
+++ b/etc/cmdline.d/watchdog.conf
@@ -1,14 +1,18 @@
-# 关闭看门狗计时器可提升性能并降低电量消耗
-# 但是不建议在开发板服务器等设备上禁用
 # 禁用 NMI（不可屏蔽中断）
-# 在某些系统上会导致用电量明显增加
+# 可以降低耗电
 nmi_watchdog=0
-# 关闭看门狗计时器（包含硬件及软件实现）
+
+# 禁用死锁检测
+# 也会关闭看门狗计时器（包含硬件及软件实现）
+# 摘自： https://docs.kernel.org/admin-guide/kernel-parameters.html
+# [KNL] Disable both lockup detectors, i.e.soft-lockup and NMI watchdog (hard-lockup).
 # 可能不适用于
 # Intel TCO 硬件看门狗
 # AMD sp5100-tco 硬件看门狗
-nowatchdog
+# nowatchdog
+
 # 禁用 Intel TCO 硬件看门狗 的内核模块
 # modprobe.blacklist=iTCO_wdt
+
 # 禁用 AMD sp5100-tco 硬件看门狗 的内核模块
 # modprobe.blacklist=sp5100_tco
