--- a/home/.local/share/fcitx5/rime/luna_pinyin.custom.yaml
+++ b/home/.local/share/fcitx5/rime/luna_pinyin.custom.yaml
@@ -1,9 +1,36 @@
 patch:
-  # 模糊音定製模板
-  # 来自雾凇拼音
-  # https://github.com/iDvel/rime-ice
-  # https://github.com/iDvel/rime-ice/blob/main/rime_ice.schema.yaml
+  # 开关 https://github.com/rime/rime-luna-pinyin/blob/master/luna_pinyin.schema.yaml
+  switches:
+    - name: ascii_mode
+      reset: 0
+      states: [ 中文, 西文 ]
+    - name: full_shape
+      states: [ 半角, 全角 ]
+    # 默认简体 https://github.com/rime/home/wiki/CustomizationGuide#%E4%B8%80%E4%BE%8B%E5%AE%9A%E8%A3%BD%E7%B0%A1%E5%8C%96%E5%AD%97%E8%BC%B8%E5%87%BA
+    - name: simplification
+      reset: 1
+      states: [ 漢字, 汉字 ]
+    - name: ascii_punct
+      states: ["。，", "．，"]
+    # emoji https://github.com/rime/rime-emoji/blob/master/emoji_suggestion.yaml
+    - name: emoji_suggestion
+      reset: 1
+      states: [ "🈚︎", "🈶️" ]
+  # emoji https://github.com/rime/rime-emoji/blob/master/emoji_suggestion.yaml
+  'engine/filters/@before 0':
+    simplifier@emoji_suggestion
+  # emoji https://github.com/rime/rime-emoji/blob/master/emoji_suggestion.yaml
+  emoji_suggestion:
+    opencc_config: emoji.json
+    option_name: emoji_suggestion
+    tips: none
+    inherit_comment: false
+  # 导入词库
+  'translator/dictionary': self_dict
+  # 模糊音 https://github.com/iDvel/rime-ice/blob/main/rime_ice.schema.yaml
   'speller/algebra':
+    # 第一行保留
+    - erase/^xx$/
     # 声母
     # zh* ch* sh* 派生出 z* c* s*
     # - derive/^([zcs])h/$1/
