--- a/etc/NetworkManager/conf.d/main.conf
+++ b/etc/NetworkManager/conf.d/main.conf
@@ -18,4 +18,4 @@ firewall-backend=nftables
 # default | dhcp | none
 # default 通过DHCP或反向DNS查找主机名
 # none：NetworkManager 将不管理主机名
-hostname-mode=default
+# ostname-mode=default
