--- a/etc/NetworkManager/conf.d/device.conf
+++ b/etc/NetworkManager/conf.d/device.conf
@@ -7,6 +7,6 @@
 wifi.scan-rand-mac-address=yes
 # wifi 后端
 # iwd (experimental) | wpa_supplicant
-wifi.backend=iwd
+# wifi.backend=iwd
 # iwd 是否自动连接
-wifi.iwd.autoconnect=false
+# wifi.iwd.autoconnect=false
