--- a/etc/nftables.conf
+++ b/etc/nftables.conf
@@ -1,76 +1,96 @@
 #!/usr/bin/nft -f
 # vim:set ts=2 sw=2 et:
 
+# based on alpine nftables default config
+
 # icmpx type
-# no-route 无路线
-# port-unreachable 端口无法访问
-# host-unreachable 主机无法访问
-# admin-prohibited 管理员禁止
+# no-route			无路线
+# port-unreachable	端口无法访问
+# host-unreachable	主机无法访问
+# admin-prohibited	防火墙拒绝
 
 table inet filter
 delete table inet filter
 
 table inet filter {
-  chain input {
-    type filter hook input priority filter
-    policy drop
+	# 拦截
+  	chain blocker {
+    	meta l4proto tcp reject with tcp reset
+    	meta l4proto udp reject with icmpx port-unreachable
+    	reject with icmpx port-unreachable
+  	}
+  	chain input {
+    	type filter hook input priority filter
+    	policy drop
     
-    ct state {established, related} accept comment "允许已建立的连接"
+    	ct state {established, related} accept comment "允许已建立的连接"
 		iifname lo accept comment "允许本地环回连接"
 		ct state invalid drop comment "丢弃无效连接"
 
-		tcp dport 113 reject with icmpx type port-unreachable \
-		comment "Reject AUTH to make it fail fast"
-
-    # IPv4
+    	# IPv4
 		# ip protocol icmp accept comment "允许 icmp"
 		# meta l4proto icmp accept comment "接受 ICMP"
 		ip protocol icmp icmp type {
-			echo-reply,  				        # type 0
+			echo-reply,					# type 0
 			destination-unreachable,    # type 3
-			echo-request,  				      # type 8
-			time-exceeded,  			      # type 11
-			parameter-problem,  		    # type 12
+			echo-request,				# type 8
+			time-exceeded,				# type 11
+			parameter-problem,			# type 12
 		} accept \
 		comment "ICMP"
 
-    # IPv6
+    	# IPv6
 		# meta l4proto ipv6-icmp accept comment "允许 icmp v6"
 		icmpv6 type {
 			destination-unreachable,  	# type 1
-			packet-too-big,  			      # type 2
-			time-exceeded,  			      # type 3
-			parameter-problem,  		    # type 4
-			echo-request,  				      # type 128
-			echo-reply,  				        # type 129
+			packet-too-big,				# type 2
+			time-exceeded,				# type 3
+			parameter-problem,			# type 4
+			echo-request,				# type 128
+			echo-reply,					# type 129
 		} accept \
 		comment "基础 IPv6 icmp 功能"
-    icmpv6 type {
-			nd-router-solicit,  	  # type 133
-			nd-router-advert,  		  # type 134
-			nd-neighbor-solicit,  	# type 135
-			nd-neighbor-advert,  	  # type 136
+    	icmpv6 type {
+			nd-router-solicit,			# type 133
+			nd-router-advert,			# type 134
+			nd-neighbor-solicit,		# type 135
+			nd-neighbor-advert,			# type 136
 		} ip6 hoplimit 255 accept \
 		comment "IPv6 SLAAC"
-    icmpv6 type {
-			mld-listener-query,  	  # type 130
+    	icmpv6 type {
+			mld-listener-query,		# type 130
 			mld-listener-report,  	# type 131
 			mld-listener-reduction,	# type 132
 			mld2-listener-report,  	# type 143
 		} ip6 saddr fe80::/10 accept \
 		comment "IPv6 本地邻居发现"
-    ip6 saddr fe80::/10 udp sport 547 udp dport 546 accept comment "dhcp v6"
+    	ip6 saddr fe80::/10 udp sport 547 udp dport 546 accept comment "dhcp v6"
 
-    tcp dport ssh ct state new limit rate 10/minute accept comment "SSH 端口限速"
-    tcp dport { http, https } accept comment "HTTP server"
-    udp dport { http, https } accept comment "HTTP/2 server"
-  }
-  chain output {
-    type filter hook output priority filter
-    policy accept
-  }
-  chain forward {
-    type filter hook forward priority filter
-    policy drop
-  }
+    	tcp dport ssh accept comment "SSH 端口限速"
+    	tcp dport { http, https } accept comment "HTTP server"
+    	udp dport { http, https } accept comment "HTTP/2 server"
+
+		tcp dport {1714-1764} accept comment "kde connect tcp 动态端口"
+        udp dport {1714-1764} accept comment "kde connect udp 动态端口"
+
+		# 拦截
+    	jump blocker
+  	}
+  	chain output {
+    	type filter hook output priority filter
+    	policy accept
+  	}
+  	chain forward {
+    	type filter hook forward priority filter
+    	policy drop
+  	}
+}
+
+table inet mangle {
+	chain PREROUTING {
+	type filter hook prerouting priority mangle
+	policy accept
+	# 反向路径过滤
+	fib saddr . iif oif missing drop
+	}
 }
