--- a/etc/sysctl.d/net.conf
+++ b/etc/sysctl.d/net.conf
@@ -31,8 +31,8 @@ net.ipv4.conf.default.send_redirects = 0
 
 # 反向路径过滤
 # 值 1 严格模式 2 宽松模式
-net.ipv4.conf.default.rp_filter = 1
-net.ipv4.conf.all.rp_filter = 1
+# net.ipv4.conf.default.rp_filter = 1
+# net.ipv4.conf.all.rp_filter = 1
 
 # 设置拥塞控制算法
 # 设置值时请参考下面两个变量
