--- a/etc/nftables.conf
+++ b/etc/nftables.conf
@@ -66,12 +66,18 @@ table inet filter {
 		comment "IPv6 本地邻居发现"
     	ip6 saddr fe80::/10 udp sport 547 udp dport 546 accept comment "dhcp v6"
 
-    	tcp dport ssh accept comment "SSH 端口限速"
+    	tcp dport ssh accept comment "SSH"
     	tcp dport { http, https } accept comment "HTTP server"
     	udp dport { http, https } accept comment "HTTP/2 server"
 
-		tcp dport {1714-1764} accept comment "kde connect tcp 动态端口"
-        udp dport {1714-1764} accept comment "kde connect udp 动态端口"
+		# tcp dport {1714-1764} accept comment "kde connect tcp 动态端口"
+        # udp dport {1714-1764} accept comment "kde connect udp 动态端口"
+
+		udp dport 4242 accept comment "nebula default"
+
+		# tcp dport 8200 accept comment "DLNA"
+
+		# udp dport 1900 accept comment "uPnP"
 
 		# 拦截
     	jump blocker
