--- a/etc/sysctl.d/net.conf
+++ b/etc/sysctl.d/net.conf
@@ -12,9 +12,9 @@ net.core.bpf_jit_harden  =  2
 # /proc/sys/net/ipv4/*
 
 # 在接口之间转发数据包
-net.ipv4.ip_forward = 0
-net.ipv4.conf.all.forwarding = 0
-net.ipv4.conf.default.forwarding = 0
+net.ipv4.ip_forward = 1
+net.ipv4.conf.all.forwarding = 1
+net.ipv4.conf.default.forwarding = 1
 
 # 禁用 ICMP 重定向
 net.ipv4.conf.all.accept_redirects = 0
@@ -22,17 +22,18 @@ net.ipv4.conf.default.accept_redirects = 0
 net.ipv4.conf.all.secure_redirects = 0
 net.ipv4.conf.default.secure_redirects = 0
 # 路由器请注释下面两行
-net.ipv4.conf.all.send_redirects = 0
-net.ipv4.conf.default.send_redirects = 0
+# net.ipv4.conf.all.send_redirects = 0
+# net.ipv4.conf.default.send_redirects = 0
 
-# ？
+# 在路由时不要将环回地址视为 martian 源或目标
+# 这允许将 127/8 用于本地路由目的
 # net.ipv4.conf.all.route_localnet = 1
 # net.ipv4.conf.default.route_localnet = 1
 
 # 反向路径过滤
 # 值 1 严格模式 2 宽松模式
-# net.ipv4.conf.default.rp_filter = 1
-# net.ipv4.conf.all.rp_filter = 1
+net.ipv4.conf.default.rp_filter = 1
+net.ipv4.conf.all.rp_filter = 1
 
 # 设置拥塞控制算法
 # 设置值时请参考下面两个变量
@@ -113,10 +114,11 @@ net.ipv4.tcp_timestamps = 1
 
 # 当新时间戳严格大于上一个连接记录的最新时间戳时
 # 是否应该为新的 TCP 传出连接重用 TIME-WAIT 状态下的现有连接
+# 需要启用 net.ipv4.tcp_timestamps
 # 0 - 禁用
 # 1 - 全局启用
 # 2 - 仅为环回流量启用
-net.ipv4.tcp_tw_reuse = 1
+net.ipv4.tcp_tw_reuse = 2
 
 # 启用RFC1323中定义的窗口缩放
 net.ipv4.tcp_window_scaling = 1
@@ -124,8 +126,8 @@ net.ipv4.tcp_window_scaling = 1
 # /proc/sys/net/ipv6/*
 
 # 在接口之间转发数据包
-net.ipv6.conf.all.forwarding = 0
-net.ipv6.conf.default.forwarding = 0
+net.ipv6.conf.all.forwarding = 1
+net.ipv6.conf.default.forwarding = 1
 
 # 禁用 ICMP 重定向
 net.ipv6.conf.all.accept_redirects = 0
@@ -151,7 +153,7 @@ net.ipv6.conf.lo.addr_gen_mode = 0
 # /proc/sys/net/mptcp/*
 
 # 启用 Multi-path tcp
-# net.mptcp.enabled = 1
+net.mptcp.enabled = 1
 
 # 启用MPTCP传输层中数据序列号校验和（DSS-checksum）
 # DSS-checksum主要和传输的可靠性相关
