--- a/etc/sysctl.d/vm.conf
+++ b/etc/sysctl.d/vm.conf
@@ -1,6 +1,6 @@
 # 增加虚拟内存脏写回时间有助于将硬盘 I/O 聚合在一起，从而减少跨硬盘写操作，并提高节能。
 # 要将值设置为60秒（默认值为5秒）
-vm.dirty_writeback_centisecs = 6000
+# vm.dirty_writeback_centisecs = 6000
 
 # laptop_mode是一个控制“笔记本电脑模式”的旋钮
 # “旋钮的合理值为5秒”
@@ -11,6 +11,8 @@ vm.dirty_writeback_centisecs = 6000
 # 设置这个参数为较低的值会减少内存的交换，从而提升一些系统上的响应度。
 # 较高值会导致内核尝试使用交换空间，而值100意味着各IO的喜好(或厌恶)程度相等。
 vm.swappiness = 50
+
+# # https://wiki.archlinuxcn.org/wiki/%E6%B8%B8%E6%88%8F#%E8%B0%83%E6%95%B4%E5%86%85%E6%A0%B8%E5%8F%82%E6%95%B0%E4%BB%A5%E5%AE%9E%E7%8E%B0%E5%93%8D%E5%BA%94%E6%97%B6%E9%97%B4%E4%B8%80%E8%87%B4%E6%80%A7
 
 # 透明巨面（THP）分配的主动压缩
 # 这会减少平均分配停滞
