--- a/etc/nftables.conf
+++ b/etc/nftables.conf
@@ -13,6 +13,18 @@ table inet filter
 delete table inet filter
 
 table inet filter {
+	# 内网地址 ipv4
+	set LANv4 {
+		type ipv4_addr
+		flags interval
+		elements = { 10.0.0.0/8, 172.16.0.0/12, 192.168.0.0/16 }
+	}
+	# 内网地址 ipv6
+	set LANv6 {
+		type ipv6_addr
+		flags interval
+		elements = { fd00::/8, fe80::/10 }
+	}
 	# 拦截
   	chain blocker {
     	meta l4proto tcp reject with tcp reset
@@ -22,7 +34,7 @@ table inet filter {
   	chain input {
     	type filter hook input priority filter
     	policy drop
-    
+
     	ct state {established, related} accept comment "允许已建立的连接"
 		iifname lo accept comment "允许本地环回连接"
 		ct state invalid drop comment "丢弃无效连接"
@@ -66,18 +78,28 @@ table inet filter {
 		comment "IPv6 本地邻居发现"
     	ip6 saddr fe80::/10 udp sport 547 udp dport 546 accept comment "dhcp v6"
 
-    	tcp dport ssh accept comment "SSH"
+		# pkttype host limit rate 5/second counter reject with icmpx type admin-prohibited
+
+		# 基础服务
+    	tcp dport ssh ct state new limit rate 4/minute accept comment "避免 SSH 暴力破解"
     	tcp dport { http, https } accept comment "HTTP server"
     	udp dport { http, https } accept comment "HTTP/2 server"
 
-		# tcp dport {1714-1764} accept comment "kde connect tcp 动态端口"
-        # udp dport {1714-1764} accept comment "kde connect udp 动态端口"
-
-		udp dport 4242 accept comment "nebula default"
-
-		# tcp dport 8200 accept comment "DLNA"
-
-		# udp dport 1900 accept comment "uPnP"
+		# 可选服务
+		# kde connect (udp&tcp 1714-1764)
+		# meta l4proto {tcp, udp} th dport {1714-1764} l3proto {ip, ip6} nh saddr {@LANv4, @LANv6} accept comment "kde connect 动态端口"
+        # tcp dport {1714-1764} ip saddr @LANv4 accept comment "kde connect tcp ipv4 动态端口"
+        # udp dport {1714-1764} ip saddr @LANv4 accept comment "kde connect udp ipv4 动态端口"
+        # tcp dport {1714-1764} ip6 saddr @LANv6 accept comment "kde connect tcp ipv6 动态端口"
+        # udp dport {1714-1764} ip6 saddr @LANv6 accept comment "kde connect udp ipv6 动态端口"
+		# udp dport 4242 accept comment "nebula default"
+		# meta l4proto udp accept comment "nebula"
+		# tcp dport 8200 ip saddr @LANv4 accept comment "DLNA"
+        # tcp dport 8200 ip6 saddr @LANv6 accept comment "DLNA"
+		# udp dport 1900 ip saddr @LANv4 accept comment "uPnP"
+		# udp dport 1900 ip6 saddr @LANv6 accept comment "uPnP"
+		# tcp dport 7250 ip saddr @LANv4 accept comment "miracast"
+        # tcp dport 7250 ip6 saddr @LANv6 accept comment "miracast"
 
 		# 拦截
     	jump blocker
@@ -96,6 +118,7 @@ table inet mangle {
 	chain PREROUTING {
 	type filter hook prerouting priority mangle
 	policy accept
+	
 	# 反向路径过滤
 	fib saddr . iif oif missing drop
 	}
