--- a/etc/sysctl.d/kernel.conf
+++ b/etc/sysctl.d/kernel.conf
@@ -1,5 +1,5 @@
 # 关闭核心转储
-kernel.core_pattern=|/bin/false
+# kernel.core_pattern=|/bin/false
 
 # Restrict dmesg access to root
 kernel.dmesg_restrict = 1
@@ -41,7 +41,7 @@ kernel.perf_event_paranoid = 2
 #  64 =  0x40 - enable signalling of processes (term, kill, oom-kill)
 # 128 =  0x80 - allow reboot/poweroff
 # 256 = 0x100 - allow nicing of all RT tasks
-kernel.sysrq = 1
+kernel.sysrq = 244
 
 # 0 启用"bpf()"非特权调用
 # 1 非特权呼叫 "bpf()" 被禁用而不恢复
