--- a/etc/sysctl.d/net.conf
+++ b/etc/sysctl.d/net.conf
@@ -6,8 +6,39 @@
 # 2 - 为所有用户启用 JIT 强化
 net.core.bpf_jit_harden  =  2
 
-# 用于网络设备的默认队列规则
-# net.core.default_qdisc = cake
+# 设置用于网络设备的默认队列规则
+# 在内核编译配置中搜索 CONFIG_NET_SCH_ 来查看内核的支持
+# 可以 modprobe sch_* 相关模块来添加拥塞控制算法
+# 请注意 tcp 拥塞控制算法
+# net.ipv4.tcp_congestion_control
+# 不正确的搭配会导致网络使用体验劣化
+# 如高丢包率等问题
+# pfifo_fast
+# 先进先出队列算法
+# fq
+# cake
+# 同时使用 AQM 和 FQ 的整形队列规则
+# 会尽量抢占宽带
+# 也会用队列系统帮路由器上的应用分配宽带
+# 适合用在路由器上
+# pie
+# Proportional Integral controller-Enhanced
+# 主要设计目标
+# 低延迟控制
+# 链路利用率高
+# 简单实现
+# 保证稳定性和快速响应
+# fq_pie
+# Flow Queuing with Proportional Integral controller Enhanced
+# 将流队列与 PIE AQM 方案相结合的排队规则
+# 为使用 qdisc 的所有流提供公平的带宽份额
+# codel
+# Controlled Delay
+# 旨在通过设置缓冲区中网络数据包的延迟限制来克服网络硬件如路由器中的缓冲膨胀
+# 改善了随机早期检测（RED）算法的整体性能
+# fq_codel
+# 公平队列控制延迟
+# net.core.default_qdisc = fq_pie
 
 # /proc/sys/net/ipv4/*
 
@@ -35,22 +66,50 @@ net.ipv4.conf.default.secure_redirects = 0
 net.ipv4.conf.default.rp_filter = 1
 net.ipv4.conf.all.rp_filter = 1
 
-# 设置拥塞控制算法
-# 设置值时请参考下面两个变量
+# 设置 tcp 拥塞控制算法
+# 下面两个变量表示你目前可用的拥塞控制算法
+# 在内核编译配置中搜索 CONFIG_TCP_CONG_ 来查看内核的支持
+# 也可以 modprobe tcp_* 相关模块来添加拥塞控制算法
 # net.ipv4.tcp_allowed_congestion_control
 # net.ipv4.tcp_available_congestion_control
-# 有线建议 cubic 无线建议 westwood
-# bbr 并不适合任何网络环境
-# 设计上 bbr 配合了 http/2 的大流传输特点
+# 同时请注意默认队列规则
+# net.core.default_qdisc
+# 不正确的搭配会导致网络使用体验劣化
+# 如高丢包率等问题
+# 基于延时反馈
+# vegas
+# 难以与其他拥塞算法竞争带宽
+# westwood
+# 根据 ACK 包接收速率来估算可用带宽
+# 不能很好的区分传输过程中的拥塞丢包和无线丢包
+# 适用于无线环境
+# 基于丢包反馈
+# reno
+# 带宽利用率不高
+# cubic
+# 一种较为温和的拥塞算法
+# 为 linux 默认拥塞算法
+# HSTCP
+# h-tcp
+# 低带宽不友好？
+# BIC-TCP
+# BBR
+# 与 fq pie fq_pie cake 搭配？
+# BBRv1
+# 并不适合任何网络环境
+# 设计上配合了 http/2 的大流传输特点
 # 拥有启动快抖动小等优点
-# 由于 bbr 并不以丢包为减小窗口的判断依据
-# bbr 能很好的对付大带宽传输中的少量丢包
+# 由于不以丢包为减小窗口的判断依据
+# 能很好的对付大带宽传输中的少量丢包
 # 但是在总可用带宽较小时
-# bbr 的降速不够迅速准确
+# 降速不够迅速准确
 # 自身带宽利用率低还会影响同一网络下的其他流
-# 因此 bbr 适合丢包率不太高
-# （bbr 算法硬编码了一个丢包率20%，超过门限会导致 bbr 自行降速）
+# 因此 BBRv1 适合丢包率不太高
 # 的长胖管道（Long-Fat Network，指延迟较高且带宽较大）
+# 据 aws 文章
+# BBRv2 在 BBRv1 基础上有了很大的改进
+# 而且在需要更高带宽的情况下
+# 它更接近于成为 CUBIC 的完全替代品
 # net.ipv4.tcp_congestion_control = cubic
 
 # 如果内核检测到 ECN 连接行为异常，则回退到非ECN
