--- a/etc/nftables.conf
+++ b/etc/nftables.conf
@@ -13,6 +13,7 @@ table inet filter
 delete table inet filter
 
 table inet filter {
+
 	# 内网地址 ipv4
 	set LANv4 {
 		type ipv4_addr
@@ -25,18 +26,13 @@ table inet filter {
 		flags interval
 		elements = { fd00::/8, fe80::/10 }
 	}
-	# 拦截
-  	chain blocker {
-    	meta l4proto tcp reject with tcp reset
-    	meta l4proto udp reject with icmpx port-unreachable
-    	reject with icmpx port-unreachable
-  	}
+
   	chain input {
     	type filter hook input priority filter
     	policy drop
 
-    	ct state {established, related} accept comment "允许已建立的连接"
 		iifname lo accept comment "允许本地环回连接"
+    	ct state {established, related} accept comment "允许已建立的连接"
 		ct state invalid drop comment "丢弃无效连接"
 
     	# IPv4
@@ -74,31 +70,20 @@ table inet filter {
 			mld-listener-reduction,	# type 132
 			mld2-listener-report,  	# type 143
 		} ip6 saddr fe80::/10 accept \
-		comment "IPv6 本地邻居发现"
+		comment "接受来自本地地址的 IPv6 组播侦听发现协议"
+
     	ip6 saddr fe80::/10 udp sport 547 udp dport 546 accept comment "dhcp v6"
 
 		# pkttype host limit rate 5/second counter reject with icmpx type admin-prohibited
 
-		# 基础服务
-    	tcp dport ssh ct state new limit rate 4/minute accept comment "避免 SSH 暴力破解"
-    	tcp dport { http, https } accept comment "HTTP server"
-    	udp dport { http, https } accept comment "HTTP/2 server"
+		# 内网服务
+        # 仅接受 TCP&UDP 包
+		meta l4proto {tcp, udp} ip saddr @LANv4 jump lan_service comment "内网地址分流"
+		meta l4proto {tcp, udp} ip6 saddr @LANv6 jump lan_service comment "内网地址分流"
 
-		# 可选服务
-		# kde connect (udp&tcp 1714-1764)
-		# meta l4proto {tcp, udp} th dport {1714-1764} l3proto {ip, ip6} nh saddr {@LANv4, @LANv6} accept comment "kde connect 动态端口"
-        # tcp dport {1714-1764} ip saddr @LANv4 accept comment "kde connect tcp ipv4 动态端口"
-        # udp dport {1714-1764} ip saddr @LANv4 accept comment "kde connect udp ipv4 动态端口"
-        # tcp dport {1714-1764} ip6 saddr @LANv6 accept comment "kde connect tcp ipv6 动态端口"
-        # udp dport {1714-1764} ip6 saddr @LANv6 accept comment "kde connect udp ipv6 动态端口"
-		# udp dport 4242 accept comment "nebula default"
-		# meta l4proto udp accept comment "nebula"
-		# tcp dport 8200 ip saddr @LANv4 accept comment "DLNA"
-        # tcp dport 8200 ip6 saddr @LANv6 accept comment "DLNA"
-		# udp dport 1900 ip saddr @LANv4 accept comment "uPnP"
-		# udp dport 1900 ip6 saddr @LANv6 accept comment "uPnP"
-		# tcp dport 7250 ip saddr @LANv4 accept comment "miracast"
-        # tcp dport 7250 ip6 saddr @LANv6 accept comment "miracast"
+		# 公网服务
+		# 仅接受 TCP&UDP 包
+		meta l4proto {tcp, udp} jump web_service comment "网络服务分流"
 
 		# 拦截
     	jump blocker
@@ -111,6 +96,46 @@ table inet filter {
     	type filter hook forward priority filter
     	policy drop
   	}
+
+	chain web_service {
+		# 公网服务
+		# TCP&UDP 规则
+		tcp dport ssh ct state new limit rate 4/minute accept comment "避免 SSH 暴力破解"
+		# th dport { http, https } accept comment "HTTP server"
+    	tcp dport { http, https } accept comment "HTTP server"
+    	udp dport { http, https } accept comment "HTTP/2 server"
+		# udp dport 4242 accept comment "nebula default"
+		# 返回主链
+		# continue
+		# return
+		# 拦截
+		jump blocker
+	}
+
+	chain lan_service {
+		# 内网服务
+		# TCP&UDP 规则
+		# kde connect (udp&tcp 1714-1764)
+		# th dport {1714-1764} accept comment "kde connect 动态端口"
+        # tcp dport {1714-1764} accept comment "kde connect tcp 动态端口"
+        # udp dport {1714-1764} accept comment "kde connect udp 动态端口"
+        udp dport 1900 accept comment "uPnP"
+		# DLNA requires uPnP
+        # tcp dport 8200 accept comment "DLNA"
+        # tcp dport 7250 accept comment "miracast"
+		# 返回主链
+		# continue
+		# return
+		# 拦截
+		jump blocker
+	}
+
+	# 拦截
+  	chain blocker {
+    	meta l4proto tcp reject with tcp reset
+    	meta l4proto udp reject with icmpx port-unreachable
+    	reject with icmpx port-unreachable
+	}
 }
 
 table inet mangle {
