--- a/etc/NetworkManager/conf.d/main.conf
+++ b/etc/NetworkManager/conf.d/main.conf
@@ -7,6 +7,8 @@
 # internal | dhcpcd | dhclient
 # dhcp=internal
 # DNS 服务提供方式
+# systemd-resolved 提供了 FallbackDNS
+# 部分网络条件下需要禁用 FallbackDNS
 # dnsmasq | systemd-resolved | default | none
 dns=systemd-resolved
 # 防火墙后端
