--- a/etc/systemd/resolved.conf.d/resolver.conf
+++ b/etc/systemd/resolved.conf.d/resolver.conf
@@ -1,9 +1,13 @@
 [Resolve]
+# 
 # 指定 dns 服务器
 # DNS=
 # 指定 后备 dns 服务器
 # alidns-ipv6 alidns-ipv6 alidns-ipv4 alidns-ipv4 dnspod-ipv6 dnspod-ipv4
 FallbackDNS=2400:3200::1#dns.alidns.com 2400:3200:baba::1#dns.alidns.com 223.5.5.5#dns.alidns.com 223.6.6.6#dns.alidns.com 2402:4e00:: 119.29.29.29
+# 禁用 FallbackDNS
+# 部分网络条件下需要禁用 FallbackDNS
+# FallbackDNS=
 # DNSSEC 支持(实验性)
 # true | allow-downgrade | false
 DNSSEC=false
