--- a/etc/NetworkManager/conf.d/main.conf
+++ b/etc/NetworkManager/conf.d/main.conf
@@ -12,8 +12,9 @@
 # dnsmasq | systemd-resolved | default | none
 dns=systemd-resolved
 # 防火墙后端
+# 置空以自动检测
 # nftables | iptables | none
-firewall-backend=nftables
+# firewall-backend=
 # IWD 保存其网络配置文件的目录
 # iwd-config-path=auto
 # 主机名模式
