--- a/etc/nftables.conf
+++ b/etc/nftables.conf
@@ -74,19 +74,18 @@ table inet filter {
 
     	ip6 saddr fe80::/10 udp sport 547 udp dport 546 accept comment "dhcp v6"
 
-		# pkttype host limit rate 5/second counter reject with icmpx type admin-prohibited
-
 		# 内网服务
         # 仅接受 TCP&UDP 包
 		meta l4proto {tcp, udp} ip saddr @LANv4 jump lan_service comment "内网地址分流"
 		meta l4proto {tcp, udp} ip6 saddr @LANv6 jump lan_service comment "内网地址分流"
+		ip saddr @LANv4 jump blocker comment "内网 v4 地址拦截"
+		ip6 saddr @LANv6 jump blocker comment "内网 v6 地址拦截"
 
 		# 公网服务
 		# 仅接受 TCP&UDP 包
 		meta l4proto {tcp, udp} jump web_service comment "网络服务分流"
+    	jump blocker comment "拒绝"
 
-		# 拦截
-    	jump blocker
   	}
   	chain output {
     	type filter hook output priority filter
@@ -98,31 +97,44 @@ table inet filter {
   	}
 
 	chain web_service {
+
 		# 公网服务
 		# TCP&UDP 规则
+		
 		tcp dport ssh ct state new limit rate 4/minute accept comment "避免 SSH 暴力破解"
-		# th dport { http, https } accept comment "HTTP server"
     	tcp dport { http, https } accept comment "HTTP server"
-    	udp dport { http, https } accept comment "HTTP/2 server"
+    	udp dport https accept comment "HTTP/2 server"
 		# udp dport 4242 accept comment "nebula default"
+		# ipfs (udp&tcp 4001)
+		# th dport 4001 accept comment "ipfs 端口"
+        # tcp dport 4001 accept comment "ipfs tcp 动态端口"
+        # udp dport 4001 accept comment "ipfs udp 动态端口"
+		# aria2c (udp&tcp 6881-6999)
+		# th dport {6881-6999} accept comment "aria2c 动态端口"
+        # tcp dport {6881-6999} accept comment "aria2c BT 动态端口"
+        # udp dport {6881-6999} accept comment "aria2c DHT 动态端口"
+
 		# 返回主链
 		# continue
 		# return
 		# 拦截
-		jump blocker
+		# jump blocker
 	}
 
 	chain lan_service {
+
 		# 内网服务
 		# TCP&UDP 规则
+
 		# kde connect (udp&tcp 1714-1764)
 		# th dport {1714-1764} accept comment "kde connect 动态端口"
         # tcp dport {1714-1764} accept comment "kde connect tcp 动态端口"
         # udp dport {1714-1764} accept comment "kde connect udp 动态端口"
-        udp dport 1900 accept comment "uPnP"
+        udp sport 1900 accept comment "uPnP"
 		# DLNA requires uPnP
         # tcp dport 8200 accept comment "DLNA"
         # tcp dport 7250 accept comment "miracast"
+
 		# 返回主链
 		# continue
 		# return
@@ -132,18 +144,32 @@ table inet filter {
 
 	# 拦截
   	chain blocker {
-    	meta l4proto tcp reject with tcp reset
-    	meta l4proto udp reject with icmpx port-unreachable
-    	reject with icmpx port-unreachable
+    	# tcp 使用 rst
+		meta l4proto tcp reject with tcp reset
+		# udp 使用 port-unreach
+		meta l4proto udp reject with icmpx port-unreachable
+		# meta nfproto ipv4 meta l4proto udp reject with icmp port-unreachable
+		# meta nfproto ipv6 meta l4proto udp reject with icmpv6 port-unreachable
+		# 剩下的
+		reject with icmpx port-unreachable
+		# meta nfproto ipv4 reject with icmp prot-unreachable
+		# meta nfproto ipv4 reject with icmpv6 port-unreachable
 	}
 }
 
 table inet mangle {
 	chain PREROUTING {
-	type filter hook prerouting priority mangle
-	policy accept
+		type filter hook prerouting priority mangle
+		policy accept
 	
-	# 反向路径过滤
-	fib saddr . iif oif missing drop
+		# 反向路径过滤
+		# fib saddr . iif oif missing drop
+		# meta nfproto ipv6 fib saddr . iif oif missing drop
+		# 宽松模式
+		# fib saddr . mark oif missing drop
+		# meta nfproto ipv6 fib saddr . mark oif missing drop
+		# 严格模式
+		fib saddr . mark . iif oif missing drop
+		# meta nfproto ipv6 fib saddr . mark . iif oif missing drop
 	}
 }
