修改 nftables.conf

--- a/etc/nftables.conf
+++ b/etc/nftables.conf
@@ -13,15 +13,14 @@ table inet filter
 delete table inet filter
 
 table inet filter {
-
-	# 内网地址 ipv4
 	set LANv4 {
+		# 内网地址 ipv4
 		type ipv4_addr
 		flags interval
 		elements = { 10.0.0.0/8, 172.16.0.0/12, 192.168.0.0/16 }
 	}
-	# 内网地址 ipv6
 	set LANv6 {
+		# 内网地址 ipv6
 		type ipv6_addr
 		flags interval
 		elements = { fd00::/8, fe80::/10 }
@@ -85,7 +84,6 @@ table inet filter {
 		# 仅接受 TCP&UDP 包
 		meta l4proto {tcp, udp} jump web_service comment "网络服务分流"
     	jump blocker comment "拒绝"
-
   	}
   	chain output {
     	type filter hook output priority filter
@@ -97,49 +95,36 @@ table inet filter {
   	}
 
 	chain web_service {
-
 		# 公网服务
 		# TCP&UDP 规则
 		
-		tcp dport ssh ct state new limit rate 4/minute accept comment "避免 SSH 暴力破解"
-    	tcp dport { http, https } accept comment "HTTP server"
-    	udp dport https accept comment "HTTP/2 server"
-		# udp dport 4242 accept comment "nebula default"
-		# ipfs (udp&tcp 4001)
-		# th dport 4001 accept comment "ipfs 端口"
-        # tcp dport 4001 accept comment "ipfs tcp 动态端口"
-        # udp dport 4001 accept comment "ipfs udp 动态端口"
-		# aria2c (udp&tcp 6881-6999)
-		# th dport {6881-6999} accept comment "aria2c 动态端口"
+		tcp dport 22 ct state new limit rate 4/minute accept comment "ssh/tcp/22	避免 SSH 暴力破解"
+		tcp dport 80 accept comment "http/tcp/80"
+    	th dport 443 accept comment "https/udp&tcp/443"
+		# udp dport 4242 accept comment "nebula/udp/4242"
+		# th dport 4001 accept comment "ipfs 端口 udp&tcp 4001"
+        # tcp dport 4001 accept comment "ipfs tcp 端口"
+        # udp dport 4001 accept comment "ipfs udp 端口"
+		# th dport {6881-6999} accept comment "aria2c 动态端口 udp&tcp 6881-6999"
         # tcp dport {6881-6999} accept comment "aria2c BT 动态端口"
         # udp dport {6881-6999} accept comment "aria2c DHT 动态端口"
-
-		# 返回主链
-		# continue
-		# return
-		# 拦截
-		# jump blocker
 	}
 
 	chain lan_service {
-
 		# 内网服务
 		# TCP&UDP 规则
 
-		# kde connect (udp&tcp 1714-1764)
-		# th dport {1714-1764} accept comment "kde connect 动态端口"
+		# th dport {1714-1764} accept comment "kde connect 动态端口 udp&tcp 1714-1764"
         # tcp dport {1714-1764} accept comment "kde connect tcp 动态端口"
         # udp dport {1714-1764} accept comment "kde connect udp 动态端口"
-        udp sport 1900 accept comment "uPnP"
-		# DLNA requires uPnP
-        # tcp dport 8200 accept comment "DLNA"
-        # tcp dport 7250 accept comment "miracast"
-
-		# 返回主链
-		# continue
-		# return
-		# 拦截
-		jump blocker
+        # udp sport 1900 accept comment "uPnP/udp/1900	DLNA requires uPnP"
+        # tcp dport 8200 accept comment "DLNA/tcp/8200"
+        # tcp dport 7250 accept comment "miracast/tcp/7250"
+		# tcp dport 21 accept comment "ftp/tcp/21"
+		# tcp dport 23 accept comment "telnet/tcp/23"
+		# tcp dport 2049 accept comment "nfs/tcp/2049"
+		# th dport 2049 accept comment "nfs3/udp&tcp/2049"
+		# tcp dport {139,445} accept comment "samba/tcp/139,445"
 	}
 
 	# 拦截
