--- a/etc/nftables.conf
+++ b/etc/nftables.conf
@@ -142,9 +142,9 @@ table inet filter {
 	}
 }
 
-table inet mangle {
+table inet raw {
 	chain PREROUTING {
-		type filter hook prerouting priority mangle
+		type filter hook prerouting priority raw
 		policy accept
 	
 		# 反向路径过滤
