--- a/etc/sysctl.d/kernel.conf
+++ b/etc/sysctl.d/kernel.conf
@@ -20,7 +20,7 @@ kernel.nmi_watchdog = 0
 # <0 立即重新启动
 # 0  不重新启动
 # >0 秒后重新启动
-kernel.panic = 16
+kernel.panic = 10
 
 # Restrict access to kernel performance events
 # -1  无限制
@@ -48,6 +48,9 @@ kernel.sysrq = 244
 # 2 禁用非特权呼叫 "bpf()"
 # kernel.unprivileged_bpf_disabled = 0
 kernel.unprivileged_bpf_disabled = 2
+
+# 是否允许普通用户运行非特权容器
+# kernel.unprivileged_userns_clone = 0
 
 # Restrict access to the ptrace() syscall
 # 1 restricted
