--- a/etc/sysctl.d/vm.conf
+++ b/etc/sysctl.d/vm.conf
@@ -17,9 +17,10 @@ vm.swappiness = 50
 # 透明巨面（THP）分配的主动压缩
 # 这会减少平均分配停滞
 # 但不一定减少最大分配停滞
-# 禁用主动压缩,它会引入抖动
 # 默认值为 20 ,取值范围 0 - 100
-vm.compaction_proactiveness = 10
+# 0 禁用主动压缩 避免引入抖动
+# 来自 archlinux wiki 游戏 的建议:0
+# vm.compaction_proactiveness = 10
 
 # 内存碎片化时的回收级别
 # 在内存碎片化的情况下
@@ -27,6 +28,7 @@ vm.compaction_proactiveness = 10
 # 这会更好地在内存碎片事件之后将应用程序数据保留在最后一级处理器缓存中
 # 默认值为 15,000
 # 0 将禁用该功能
+# 来自 archlinux wiki 游戏 的建议:1
 # vm.watermark_boost_factor = 1
 
 # 最小可用内存容量(单位:kb)
@@ -43,8 +45,10 @@ vm.watermark_scale_factor = 100
 # 1 区域回收开启
 # 2 区域回收将脏页写出
 # 4 区域回收交换页面
-vm.zone_reclaim_mode = 0
+# 来自 archlinux wiki 游戏 的建议:0
+# vm.zone_reclaim_mode = 0
 
 # 减少最大页面锁定获取延迟
 # 同时保持足够的吞吐量
-vm.page_lock_unfairness = 4
+# 来自 archlinux wiki 游戏 的建议:1
+# vm.page_lock_unfairness = 4
