--- a/etc/sysctl.d/net.conf
+++ b/etc/sysctl.d/net.conf
@@ -38,33 +38,24 @@ net.core.bpf_jit_harden  =  2
 # 改善了随机早期检测（RED）算法的整体性能
 # fq_codel
 # 公平队列控制延迟
-# net.core.default_qdisc = fq_pie
+# net.core.default_qdisc = fq_codel
+
+# 接收队列的大小
+# 在使用高速网卡时增加系统的这个设定值可能有助于防止数据包丢失
+# net.core.netdev_max_backlog = 1024
+
+# 最大连接数
+# net.core.somaxconn = 4096
 
 # /proc/sys/net/ipv4/*
 
-# 在接口之间转发数据包
+# IP 协议的 early demux 选项
+# 纯转发设备应关闭它
+# 默认值：1
+# net.ipv4.ip_early_demux = 0
+
+# 开启转发支持
 net.ipv4.ip_forward = 1
-net.ipv4.conf.all.forwarding = 1
-net.ipv4.conf.default.forwarding = 1
-
-# 禁用 ICMP 重定向
-net.ipv4.conf.all.accept_redirects = 0
-net.ipv4.conf.default.accept_redirects = 0
-net.ipv4.conf.all.secure_redirects = 0
-net.ipv4.conf.default.secure_redirects = 0
-# 路由器请注释下面两行
-# net.ipv4.conf.all.send_redirects = 0
-# net.ipv4.conf.default.send_redirects = 0
-
-# 在路由时不要将环回地址视为 martian 源或目标
-# 这允许将 127/8 用于本地路由目的
-# net.ipv4.conf.all.route_localnet = 1
-# net.ipv4.conf.default.route_localnet = 1
-
-# 反向路径过滤
-# 值 1 严格模式 2 宽松模式
-net.ipv4.conf.default.rp_filter = 1
-net.ipv4.conf.all.rp_filter = 1
 
 # 设置 tcp 拥塞控制算法
 # 下面两个变量表示你目前可用的拥塞控制算法
@@ -86,13 +77,15 @@ net.ipv4.conf.all.rp_filter = 1
 # 基于丢包反馈
 # reno
 # 带宽利用率不高
+# bic
+# 适用于rtt较高但丢包极为罕见的情况？
 # cubic
 # 一种较为温和的拥塞算法
 # 为 linux 默认拥塞算法
-# HSTCP
+# hybla
+# 适用于高延时、高丢包率的网络？
 # h-tcp
 # 低带宽不友好？
-# BIC-TCP
 # BBR
 # 与 fq pie fq_pie cake 搭配？
 # BBRv1
@@ -112,10 +105,42 @@ net.ipv4.conf.all.rp_filter = 1
 # 它更接近于成为 CUBIC 的完全替代品
 # net.ipv4.tcp_congestion_control = cubic
 
+# 为 TCP 启用早期多路复用
+# 默认值：1
+# net.ipv4.tcp_early_demux = 1
+
+# 是否开启 TLP(Tail loss probe) 机制
+# TLP 机制需要 RACK 机制才能正常工作
+# 0     关闭
+# 3/4   启用
+# 默认值：3
+# net.ipv4.tcp_early_retrans = 3
+
+# 控制 TCP 使用的 Explicit Congestion Notification (ECN) 机制
+# ECN 只有在 TCP 连接双方协商支持时才启用
+# 这个功能允许路由在丢包之前就通知有拥塞的存在，以此来减少因为真正拥塞导致的丢包
+# 默认值：2
+# 0: 关闭 ECN，不主动开启也不被动响应
+# 1: 开启 ECN，主动开启，被动响应
+# 2: 开启 ECN，不主动开启，被动响应
+# net.ipv4.tcp_ecn = 1
+
 # 如果内核检测到 ECN 连接行为异常，则回退到非ECN
 # 如果tcp_ecn或路由（或拥塞）ECN 设置被禁用，则不使用该值
-# 默认 1 启用
-net.ipv4.tcp_ecn_fallback = 1
+# 默认 1
+# net.ipv4.tcp_ecn_fallback = 1
+
+# 启用 TCP Fast Open
+# 1     客户端，允许客户端在 SYN 中携带数据
+# 2     服务端，开启服务端支持，允许在三次握手结束前接收数据并传递给应用程序
+# 4     客户端，不管 FTO cookie 是否存在，都在 SYN 中发送数据，且不带 cookie 选项
+# 200   服务端，没有 cookie 选项时依旧接收 SYN 报文中的数据
+# 400   服务端，为所有监听端口开启 FTO，不用为端口单独设置 TCP_FASTOPEN 选项
+net.ipv4.tcp_fastopen = 3
+
+# TFO 防火墙黑洞问题发生时停用 TFO 的时长 以秒为单位
+# 0 禁用
+net.ipv4.tcp_fastopen_blackhole_timeout_sec = 60
 
 # 启用RFC5682中定义的前向 RTO 恢复
 # F-RTO 是一种用于 TCP 重传的增强恢复算法
@@ -123,7 +148,7 @@ net.ipv4.tcp_ecn_fallback = 1
 # F-RTO不需要对等方的任何支持
 # 默认情况下，它使用非零值启用
 # 1 开启基本版本的F-RTO算法
-# 2 如果流使用SACK的话，开启SACK-增强的F-TRO算法
+# 2 如果流使用SACK的话，开启SACK-增强的F-TRO算法 （默认）
 net.ipv4.tcp_frto = 2
 
 # 启用 keepalive 时 TCP 发送 keepalive 消息的频率。 默认值：2 小时
@@ -132,6 +157,9 @@ net.ipv4.tcp_keepalive_time = 60
 net.ipv4.tcp_keepalive_intvl = 10
 # TCP 发出多少个 keepalive 探测器，直到它决定断开连接。默认值：9。
 net.ipv4.tcp_keepalive_probes = 6
+
+# 挂起连接等待确认的最大队列长度
+# net.ipv4.tcp_max_syn_backlog = 4096
 
 # TCP 接收缓冲区自动调整
 # 默认启用
@@ -143,13 +171,27 @@ net.ipv4.tcp_moderate_rcvbuf = 1
 # 2  =  始终启用
 net.ipv4.tcp_mtu_probing = 2
 
-# 可以防止 tcp time-wait assassination 缺陷
-# 丢弃处于 time-wait 状态的 socket 的 RST 数据包
-net.ipv4.tcp_rfc1337 = 1
+# Protective Load Balancing
+# 需要 tcp 拥塞控制算法 的支持
+# 目前仅支持 ipv6
+# 默认未启用
+# net.ipv4.tcp_plb_enabled = 1
+
+# 开启一些还在实验的丢包恢复的功能
+# 0x1，（默认）为丢包重传和丢尾包的情况开启 RACK 丢包检测，对 SACK 连接来说，它已经包含了 RFC6675 的恢复并且禁用相关功能
+# 0x2，使用静态的 RACK 重排序窗口，置为 (min_rtt/4)
+# 0x4，不使用 RACK 的启发式 DUPACK 阈值
+# net.ipv4.tcp_recovery = 1
 
 # SACK
 # Enable select acknowledgments (SACKS).
 net.ipv4.tcp_sack = 1
+
+# 这将更改 TCP 接收窗口的计算方式
+# 0 已禁用 窗口永远不会缩小
+# 1 已启用 必要时窗口会缩小
+# 启用可能会导致网速下降
+# net.ipv4.tcp_shrink_window = 1
 
 # 设置 TCP 是否应仅对新连接或空闲时间过长的现有连接开启'以默认窗口大小启动连接'
 # 默认值：1
@@ -160,37 +202,69 @@ net.ipv4.tcp_slow_start_after_idle = 0
 # 不合 RFC 规范
 net.ipv4.tcp_syncookies = 0
 
-# 启用 TCP Fast Open
-net.ipv4.tcp_fastopen = 3
-
-# TFO 防火墙黑洞问题发生时停用 TFO 的时长 以秒为单位
-net.ipv4.tcp_fastopen_blackhole_timeout_sec = 60
-
 # TCP 时间戳
-# 1：启用RFC1323中定义的时间戳，并为每个连接使用随机偏移量而不是只使用当前时间。
-# 2：与 1 类似，但没有随机偏移量。
+# 1：开启功能并为每个连接使用随机的偏移量而不是只使用当前时间
+# 2：与 1 类似，但没有随机偏移量
 net.ipv4.tcp_timestamps = 1
+
+# 是否为 thin stream 开启线性超时重传
+# 对一些依赖低延时的小流量数据流，可以减小重传的延时
+net.ipv4.tcp_thin_linear_timeouts = 1
 
 # 当新时间戳严格大于上一个连接记录的最新时间戳时
 # 是否应该为新的 TCP 传出连接重用 TIME-WAIT 状态下的现有连接
 # 需要启用 net.ipv4.tcp_timestamps
+# 1 会导致一些问题
 # 0 - 禁用
 # 1 - 全局启用
 # 2 - 仅为环回流量启用
-net.ipv4.tcp_tw_reuse = 2
+# net.ipv4.tcp_tw_reuse = 1
 
 # 启用RFC1323中定义的窗口缩放
 net.ipv4.tcp_window_scaling = 1
 
-# /proc/sys/net/ipv6/*
+# 为 UDP 启用早期解复用
+# 默认值：1
+# net.ipv4.udp_early_demux = 1
+
+# 禁用 ICMP 重定向
+net.ipv4.conf.all.accept_redirects = 0
+net.ipv4.conf.default.accept_redirects = 0
+net.ipv4.conf.all.secure_redirects = 0
+net.ipv4.conf.default.secure_redirects = 0
+# 路由器请注释下面两行
+# net.ipv4.conf.all.send_redirects = 0
+# net.ipv4.conf.default.send_redirects = 0
 
 # 在接口之间转发数据包
-net.ipv6.conf.all.forwarding = 1
-net.ipv6.conf.default.forwarding = 1
+net.ipv4.conf.all.forwarding = 1
+net.ipv4.conf.default.forwarding = 1
+
+# 接受具有本地源地址的数据包
+# 默认 0
+# net.ipv4.conf.all.accept_local = 1
+# net.ipv4.conf.default.accept_local = 1
+
+# 在路由时不要将环回地址视为 martian 源或目标
+# 这允许将 127/8 用于本地路由目的
+# 默认 0
+# net.ipv4.conf.all.route_localnet = 1
+# net.ipv4.conf.default.route_localnet = 1
+
+# 反向路径过滤
+# 值 1 严格模式 2 宽松模式
+net.ipv4.conf.default.rp_filter = 1
+net.ipv4.conf.all.rp_filter = 1
+
+# /proc/sys/net/ipv6/*
 
 # 禁用 ICMP 重定向
 net.ipv6.conf.all.accept_redirects = 0
 net.ipv6.conf.default.accept_redirects = 0
+
+# 在接口之间转发数据包
+net.ipv6.conf.all.forwarding = 1
+net.ipv6.conf.default.forwarding = 1
 
 # 隐私扩展的首选项 （RFC3041）
 # 0 禁用隐私扩展
